[project]
name = "claude-blog"
version = "1.5.0"
description = "AI-powered blog creation and optimization skill for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AgriciDaniel"},
]

[project.optional-dependencies]
core = [
    "textstat>=0.7.3",
    "beautifulsoup4>=4.12.0",
]
advanced = [
    "lxml",
    "jsonschema",
    "spacy",
    "sentence-transformers",
    "scikit-learn",
    "language-tool-python",
]
dev = [
    "pytest>=8.0",
    "textstat>=0.7.3",
    "beautifulsoup4>=4.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
