[project]
name = "claude-blog"
version = "1.6.5"
description = "AI-powered blog creation and optimization skill for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AgriciDaniel"},
]

[project.optional-dependencies]
core = [
    "textstat>=0.7.3",
    "beautifulsoup4>=4.12.0",
]
advanced = [
    "lxml",
    "jsonschema",
    "spacy",
    "sentence-transformers",
    "scikit-learn",
    "language-tool-python",
]
google = [
    "requests>=2.32.4",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-analytics-data>=0.18.0",
]
dev = [
    "pytest>=8.0",
    "textstat>=0.7.3",
    "beautifulsoup4>=4.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
